# bounty-concierge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bounty_question.yml  bug_report.yml  wallet_registration.yml
.github/workflows/: bounty_index_sync.yml
concierge/: __init__.py  __main__.py  announcer.py  bounty_index.py  cli.py  config.py  engagement.py  faq_engine.py  payout_tracker.py  skill_matcher.py  wallet_helper.py
data/: bounty_index.json  skill_tags.json
docs/: FAQ.md  GETTING_STARTED.md  PAYOUT_GUIDE.md  TECH_STACK.md
tests/: test_bounty_index.py  test_config.py  test_faq_engine.py  test_wallet_helper.py
